--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1> Laika plānošanas metodes</h1>
         <h2>Ir svarīgi plānot savu laiku, lai efektīvi sasniegtu savus mērķus</h2>
+        <p>plānot savu laiku ir īpaši svarīgi, lai saglabātu mieru dzīvē</p>
+        <p>Lielākā daļa skolēnu problēmu sākas no nespējas plānot savu laiku, rodas lieks stress, tāpēc vēlos informēt jauniešus par dažādām iespējām</p>
         <p>savu laiku var strukturēt dažādos veidos:</p>
         <a href="https://timeular.com/blog/pomodoro-alternatives/" target="_blank">
             <img src="bilde.png" alt="attels" width="400" height="300"/>
