--- a/lietotnes.html
+++ b/lietotnes.html
@@ -5,11 +5,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Priekšrocības</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Dažādu metožu priekšrocības</div>
+        <div>
+            <a href="index.html">laika plānošanas metodes</a>
+        </div>
     </body>
 </html>
