--- a/lietotnes.html
+++ b/lietotnes.html
@@ -11,6 +11,28 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
     </head>
     <body>
         <div>Dažādu metožu priekšrocības</div>
+        <table> 
+            <tr>
+                <th> Nosaukums </th>
+                <th> Kas nepieciešams </th>
+                <th> Priekšrocības </th>
+            </tr>
+            <tr>
+                <th>Pomodoro metode</th>
+                <th>taimeris</th>
+                <th>Palīdz koncentrēties uz konkrētu darbu ar iespēju regulāri atpūsties</th>
+            </tr>
+            <tr>
+                <th>Eizenhauera princips</th>
+                <th>pieraksti</th>
+                <th>Palīdz izprast darbu steidzamību un darīt tos steidzamības secībā</th>
+            </tr>
+            <tr>
+                <th>Pareto princips</th>
+                <th>pierakstu vieta</th>
+                <th>Palīdz izprast </th>
+            </tr>
+        </table>
         <div>
             <a href="index.html">laika plānošanas metodes</a>
         </div>
