--- a/lietotnes.html
+++ b/lietotnes.html
@@ -29,7 +29,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             </tr>
             <tr>
                 <th>Pareto princips</th>
-                <th>pierakstu vieta</th>
+                <th>pierakstu laiks</th>
                 <th>Palīdz izprast </th>
             </tr>
         </table>
