--- a/lietotnes.html
+++ b/lietotnes.html
@@ -8,6 +8,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <title>Priekšrocības</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            table,th,tr{border:1px solid green; font-size:140; color: violet}
+            h1{font-size:500; color:#bb2d3b}
+        </style>
     </head>
     <body>
         <div>Dažādu metožu priekšrocības</div>
@@ -29,8 +33,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             </tr>
             <tr>
                 <th>Pareto princips</th>
-                <th>pierakstu laiks</th>
-                <th>Palīdz izprast </th>
+                <th>pieraksti</th>
+                <th>Palīdz izprast kādus defektus jānovēršs</th>
             </tr>
         </table>
         <div>
