--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li> Eizenhauera princips </li>
             <li> Pareto princips </li>
         </ul>
-        <p> papildus informāciju var iegūt <a href="https://timeular.com/blog/pomodoro-alternatives/">šeit</a> </p>
+        <p> papildus informāciju var iegūt <a href="https://timeular.com/blog/pomodoro-alternatives/" target="_blank">šeit</a> </p>
         <div>
             <a href="lietotnes.html">laika plānošanas lietotnes</a>
         </div>
