--- a/lietotnes.html
+++ b/lietotnes.html
@@ -14,9 +14,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         </style>
     </head>
     <body>
-        <div>Dažādu metožu priekšrocības</div>
+        <h1 class="h1"> priekšarocības </h1>
         <table> 
-            <tr>
+            <tr style="font-size:150; font-weight:bold">
                 <th> Nosaukums </th>
                 <th> Kas nepieciešams </th>
                 <th> Priekšrocības </th>
