--- a/lietotnes.html
+++ b/lietotnes.html
@@ -9,14 +9,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            table,th,tr{border:1px solid green; font-size:140; color: violet}
-            h1{font-size:500; color:#bb2d3b}
+            table,th,tr{border:1px solid green; font-size:140%; color: violet}
+            h1 {font-size:500%; color:#bb2d3b}
         </style>
     </head>
     <body>
-        <h1 class="h1"> priekšarocības </h1>
+        <h1> dažādu metožu priekšrocības </h1>
         <table> 
-            <tr style="font-size:150; font-weight:bold">
+            <tr style="font-size:150%; font-weight:bold">
                 <th> Nosaukums </th>
                 <th> Kas nepieciešams </th>
                 <th> Priekšrocības </th>
