--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <p> papildus informāciju var iegūt <a href="https://timeular.com/blog/pomodoro-alternatives/" target="_blank">šeit</a> </p>
         <div>
             <a href="lietotnes.html">laika plānošanas lietotnes</a>
+            <a href="skola.html">saite uz skola.html</a>
+            <a href="baiti.html">saite uz baiti.html</a>
         </div>
     </body>
 </html>
