--- a/skola.html
+++ b/skola.html
@@ -73,6 +73,12 @@ footer {
   border: 1px solid black;
 }
 </style>
+<style>
+nav {
+  background-image: url('skola.jpg');
+  background-repeat: repeat;
+}
+</style>
 </head>
 <body>
 <header>
@@ -80,7 +86,7 @@ footer {
 </header>
 
 <section>
-  <nav style="background-image: url('skola.jpg');">
+  <nav>
       <p>Satura rādītājs</p>
     <ol>
       <li><a href="#vesture">Vēsture</a></li>
