--- a/baiti.html
+++ b/baiti.html
@@ -10,6 +10,29 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <form>
+                <p>Aprēķināt cik daudz informācijas var lejuplādēt</p>
+                <input type="text" id="sek" onclick="reset()"> sekundēs, ja interneta ātrums ir 25 Mbps.<br><br>
+                <p> Atbilde</p>
+                <input type="text" id="daudz">
+                <input type="radio" name="KiB" value="KiB" onclick="parvert1()">
+                <label for="Kib">KiB</label>
+                <input type="radio" name="KB" value="KB" onclick="parvert2()">
+                <label for="Kb">KB</label>
+            </form>
+        </div>
+        <script>
+            function parvert1(){
+                document.getElementById("daudz").value=document.getElementById("sek").value*25*976.5625;
+            }
+            function parvert2(){
+                document.getElementById("daudz").value=document.getElementById("sek").value*25*1000;
+            }
+            function reset(){
+                document.getElementById("daudz").reset
+                document.getElementById("sek").reset;
+            }
+        </script>
     </body>
 </html>
