--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </ul>
         <p> papildus informāciju var iegūt <a href="https://timeular.com/blog/pomodoro-alternatives/" target="_blank">šeit</a> </p>
         <div>
-            <a href="lietotnes.html">laika plānošanas lietotnes</a>
-            <a href="skola.html">saite uz skola.html</a>
-            <a href="baiti.html">saite uz baiti.html</a>
+            <a href="lietotnes.html">laika plānošanas lietotnes</a><br>
+            <a href="skola.html">saite uz skola.html</a><br>
+            <a href="baiti.html">saite uz baiti.html</a><br>
         </div>
     </body>
 </html>
