--- a/skola.html
+++ b/skola.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>rv1g</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -75,8 +75,9 @@ footer {
 </style>
 <style>
 nav {
-  background-image: url('skola.jpg');
+  background-image: url("skola.jpg");
   background-repeat: repeat;
+  background-size: cover;
 }
 </style>
 </head>
@@ -86,7 +87,7 @@ nav {
 </header>
 
 <section>
-  <nav>
+  <nav style="background-image: url('skola.jpg');">
       <p>Satura rādītājs</p>
     <ol>
       <li><a href="#vesture">Vēsture</a></li>
@@ -151,7 +152,7 @@ Rainis (īstajā vārdā Jānis Pliekšāns) - latviešu dzejnieks, dramaturgs, 
 
 <footer>
     <a href="http://r1g.edu.lv/v/index/" target="_blank">
-        <img src="skolaslogo.jpg" alt="skolas logo">
+        <img src="logo_sm3" alt="skolas logo">
     </a>
 </footer>
 
