--- a/skola.html
+++ b/skola.html
@@ -87,7 +87,7 @@ nav {
 </header>
 
 <section>
-  <nav style="background-image: url('skola.jpg');">
+  <nav>
       <p>Satura rādītājs</p>
     <ol>
       <li><a href="#vesture">Vēsture</a></li>
