--- a/skola.html
+++ b/skola.html
@@ -75,7 +75,7 @@ footer {
 </style>
 <style>
 nav {
-  background-image: url("skola.jpg");
+  background-image: url('skola.jpg');
   background-repeat: repeat;
   background-size: cover;
 }
