--- a/skola.html
+++ b/skola.html
@@ -77,8 +77,7 @@ footer {
 nav {
   background-image: url('skola.jpg');
   background-repeat: repeat;
-  background-size: cover;
-}
+  }
 </style>
 </head>
 <body>
@@ -152,7 +151,7 @@ Rainis (īstajā vārdā Jānis Pliekšāns) - latviešu dzejnieks, dramaturgs, 
 
 <footer>
     <a href="http://r1g.edu.lv/v/index/" target="_blank">
-        <img src="logo_sm3" alt="skolas logo">
+        <img src="logo_sm3.png" alt="skolas logo">
     </a>
 </footer>
 
