--- a/skola.html
+++ b/skola.html
@@ -77,6 +77,7 @@ footer {
 nav {
   background-image: url('skola.jpg');
   background-repeat: repeat;
+  background-size: contain;
   }
 </style>
 </head>
@@ -151,7 +152,7 @@ Rainis (īstajā vārdā Jānis Pliekšāns) - latviešu dzejnieks, dramaturgs, 
 
 <footer>
     <a href="http://r1g.edu.lv/v/index/" target="_blank">
-        <img src="logo_sm3.png" alt="skolas logo">
+        <img src="skolaslogo.jpg" alt="skolas logo">
     </a>
 </footer>
 
